name:                thready
version:             0.1.0.0
synopsis:            Threading experiments
-- description:         
-- license:             
license-file:        LICENSE
author:              Matt "strager" Glazar
maintainer:          strager.nds@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Thread,
    VarSource

  build-depends:
    base == 4.5.*,
    monad-parallel,
    transformers
